--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "build": "webpack",
-    "serve": "webpack-dev-server --port 3000"
+    "serve": "webpack-dev-server",
+    "clean": "rm -rf ./dist"
   },
   "devDependencies": {
     "webpack-cli": "^3.1.0"
