--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "serve": "webpack-dev-server",
     "clean": "rm -rf ./dist",
     "copy": "cp _redirects dist/",
-    "build": "npm run bundle && npm run copy"
+    "build": "npm run bundle && npm run copy",
+    "test": "elm-test"
   },
   "devDependencies": {
+    "elm-test": "^0.19.1-revision2",
     "webpack-cli": "^3.1.0"
   },
   "name": "genart",
