--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "clean": "rm -rf ./dist",
     "copy": "cp _redirects dist/ && cp src/colorwheel.jpeg dist/",
     "build": "npm run bundle && npm run copy",
-    "test": "elm-test"
+    "test": "elm-test",
+    "cy:open": "cypress open"
   },
   "devDependencies": {
+    "cypress": "^4.1.0",
     "elm-test": "^0.19.1-revision2",
     "webpack-cli": "^3.1.0"
   },
