--- a/package.json
+++ b/package.json
@@ -2,23 +2,20 @@
   "dependencies": {
   },
   "scripts": {
-    "bundle": "webpack",
-    "serve": "webpack-dev-server",
+    "bundle": "parcel build src/index.html",
+    "serve": "parcel src/index.html",
+    "sserve": "parcel src/index.html --cert ../cert-self-signed-localhost/localhost.crt --key ../cert-self-signed-localhost/localhost.key",
     "clean": "rm -rf ./dist",
     "copy": "cp _redirects dist/ && cp src/colorwheel.jpeg dist/",
-    "build": "npm run bundle && npm run copy",
+    "build": "yarn bundle && yarn copy",
     "test": "elm-test"
   },
   "devDependencies": {
-    "css-loader": "^1.0.0",
-    "elm-webpack-loader": "^5.0.0",
-    "file-loader": "^2.0.0",
-    "style-loader": "^1.2.1",
-    "url-loader": "^1.1.1",
-    "webpack": "^4.17.1",
-    "webpack-dev-server": "^3.10.3",
+    "cssnano": "^4.1.10",
+    "elm": "^0.19.1-3",
+    "elm-hot": "^1.1.4",
     "elm-test": "^0.19.1-revision2",
-    "webpack-cli": "^3.1.0"
+    "parcel": "^1.12.4"
   },
   "name": "genart",
   "version": "0.0.1",
