--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "dependencies": {
-  },
+  "name": "genart",
+  "version": "0.0.1",
+  "main": "index.js",
+  "repository": "https://github.com/jyrodrigues/genart",
+  "author": "José Rodrigues <jyrodrigues@gmail.com>",
   "scripts": {
     "bundle": "parcel build src/index.html",
     "serve": "parcel src/index.html",
     "sserve": "parcel src/index.html --cert ../cert-self-signed-localhost/localhost.crt --key ../cert-self-signed-localhost/localhost.key",
     "clean": "rm -rf ./dist",
-    "copy": "cp _redirects dist/ && cp src/colorwheel.jpeg dist/",
+    "copy": "cp _redirects dist/",
     "build": "yarn bundle && yarn copy",
     "test": "elm-test"
   },
+  "dependencies": {},
   "devDependencies": {
     "cssnano": "^4.1.10",
     "elm": "^0.19.1-3",
     "elm-hot": "^1.1.4",
     "elm-test": "^0.19.1-revision2",
-    "parcel": "^1.12.4"
+    "parcel": "^1.12.4",
+    "parcel-plugin-static-files-copy": "^2.4.3"
   },
-  "name": "genart",
-  "version": "0.0.1",
-  "main": "index.js",
-  "repository": "https://github.com/jyrodrigues/genart",
-  "author": "José Rodrigues <jyrodrigues@gmail.com>"
+  "staticFiles": {
+    "staticPath": ["static"]
+  }
 }
