--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "genart",
   "version": "0.0.1",
-  "main": "index.js",
   "repository": "https://github.com/jyrodrigues/genart",
   "author": "José Rodrigues <jyrodrigues@gmail.com>",
   "scripts": {
@@ -15,6 +14,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@parcel/transformer-elm": "2.3.2",
     "cssnano": "^5.0.17",
     "elm": "^0.19.1-3",
     "elm-hot": "^1.1.4",
