--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@parcel/transformer-elm": "2.3.2",
+    "@parcel/transformer-elm": "^2.4.0",
     "cssnano": "^5.0.17",
     "elm": "^0.19.1-3",
     "elm-hot": "^1.1.4",
