--- a/package.json
+++ b/package.json
@@ -19,12 +19,6 @@
     "elm": "^0.19.1-3",
     "elm-hot": "^1.1.4",
     "elm-test": "^0.19.1-revision7",
-    "parcel": "^2.4.0",
-    "parcel-plugin-static-files-copy": "^2.6.0"
-  },
-  "staticFiles": {
-    "staticPath": [
-      "static"
-    ]
+    "parcel": "^2.4.0"
   }
 }
